// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FoldingRangeProvider > await-catch 1`] = `
[
  {
    "endLine": 1,
    "startLine": 0,
  },
  {
    "endLine": 7,
    "startLine": 6,
  },
]
`;

exports[`FoldingRangeProvider > await-peding-catch 1`] = `
[
  {
    "endLine": 1,
    "startLine": 0,
  },
  {
    "endLine": 3,
    "startLine": 2,
  },
  {
    "endLine": 7,
    "startLine": 6,
  },
  {
    "endLine": 10,
    "startLine": 9,
  },
]
`;

exports[`FoldingRangeProvider > await-pending-only 1`] = `
[
  {
    "endLine": 1,
    "startLine": 0,
  },
]
`;

exports[`FoldingRangeProvider > await-pending-then 1`] = `
[
  {
    "endLine": 1,
    "startLine": 0,
  },
  {
    "endLine": 3,
    "startLine": 2,
  },
]
`;

exports[`FoldingRangeProvider > await-pending-then-catch 1`] = `
[
  {
    "endLine": 1,
    "startLine": 0,
  },
  {
    "endLine": 3,
    "startLine": 2,
  },
  {
    "endLine": 5,
    "startLine": 4,
  },
  {
    "endLine": 9,
    "startLine": 8,
  },
  {
    "endLine": 12,
    "startLine": 11,
  },
  {
    "endLine": 15,
    "startLine": 14,
  },
]
`;

exports[`FoldingRangeProvider > await-then 1`] = `
[
  {
    "endLine": 1,
    "startLine": 0,
  },
  {
    "endLine": 7,
    "startLine": 6,
  },
]
`;

exports[`FoldingRangeProvider > await-then-catch 1`] = `
[
  {
    "endLine": 1,
    "startLine": 0,
  },
  {
    "endLine": 3,
    "startLine": 2,
  },
]
`;

exports[`FoldingRangeProvider > await-then-catch-shorthand 1`] = `
[
  {
    "endLine": 1,
    "startLine": 0,
  },
  {
    "endLine": 3,
    "startLine": 2,
  },
]
`;

exports[`FoldingRangeProvider > each-block 1`] = `
[
  {
    "endLine": 1,
    "startLine": 0,
  },
  {
    "endLine": 6,
    "startLine": 5,
  },
]
`;

exports[`FoldingRangeProvider > each-else 1`] = `
[
  {
    "endLine": 1,
    "startLine": 0,
  },
  {
    "endLine": 3,
    "startLine": 2,
  },
]
`;

exports[`FoldingRangeProvider > each-keyed 1`] = `
[
  {
    "endLine": 3,
    "startLine": 2,
  },
]
`;

exports[`FoldingRangeProvider > if-block 1`] = `
[
  {
    "endLine": 1,
    "startLine": 0,
  },
  {
    "endLine": 3,
    "startLine": 2,
  },
  {
    "endLine": 5,
    "startLine": 4,
  },
  {
    "endLine": 9,
    "startLine": 8,
  },
  {
    "endLine": 13,
    "startLine": 12,
  },
  {
    "endLine": 15,
    "startLine": 14,
  },
]
`;

exports[`FoldingRangeProvider > key-block 1`] = `
[
  {
    "endLine": 1,
    "startLine": 0,
  },
  {
    "endLine": 7,
    "startLine": 6,
  },
]
`;

exports[`FoldingRangeProvider > parser-error 1`] = `
[
  {
    "endCharacter": undefined,
    "endLine": 2,
    "kind": undefined,
    "startCharacter": undefined,
    "startLine": 1,
  },
  {
    "endLine": 7,
    "startLine": 6,
  },
  {
    "endLine": 9,
    "startLine": 8,
  },
]
`;

exports[`FoldingRangeProvider > script 1`] = `
[
  {
    "endCharacter": undefined,
    "endLine": 2,
    "kind": "imports",
    "startCharacter": undefined,
    "startLine": 1,
  },
  {
    "endCharacter": undefined,
    "endLine": 5,
    "kind": undefined,
    "startCharacter": undefined,
    "startLine": 4,
  },
]
`;
